# Ministry-Of-Truth

./: .gitignore  Cargo.toml  README.md
node/: Cargo.toml
node/pallets/ministry-of-truth/: Cargo.toml
node/pallets/ministry-of-truth/src/: lib.rs
node/src/: chain_spec.rs  command.rs
pallets/PublicaFides/: Cargo.toml  README.md
pallets/PublicaFides/src/: benchmarking.rs  helper.rs  lib.rs  mock.rs  tests.rs
pallets/ministry-of-truth/: Cargo.toml  README.md
pallets/ministry-of-truth/src/: benchmarking.rs  lib.rs  mock.rs  tests.rs
pallets/pallet-collective/: Cargo.toml
pallets/pallet-collective/src/: benchmarking.rs  lib.rs
pallets/publica-fides/src/: lib.rs
runtime/: Cargo.toml
runtime/src/: lib.rs
