[package]
name = "pallet-collective"
version = "4.0.0-dev"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2018"
license = "Apache-2.0"
homepage = "https://substrate.dev"
repository = "https://github.com/paritytech/substrate/"
description = "Collective system: Members of a set of account IDs can make their collective feelings known through dispatched calls from one of two specialized origins."
readme = "README.md"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec = { package = "parity-scale-codec", version = "2.0.0", default-features = false, features = [
	"derive",
] }
sp-core = { version = "4.0.0-dev", default-features = false, git = 'https://github.com/justinFrevert/substrate.git', tag = 'populace-v0.1' }
sp-std = { version = "4.0.0-dev", default-features = false, git = 'https://github.com/justinFrevert/substrate.git', tag = 'populace-v0.1'  }
sp-io = { version = "4.0.0-dev", default-features = false, git = 'https://github.com/justinFrevert/substrate.git', tag = 'populace-v0.1'  }
sp-runtime = { version = "4.0.0-dev", default-features = false, git = 'https://github.com/justinFrevert/substrate.git', tag = 'populace-v0.1' }
frame-support = { version = "4.0.0-dev", default-features = false, git = 'https://github.com/justinFrevert/substrate.git', tag = 'populace-v0.1' }
frame-system = { version = "4.0.0-dev", default-features = false, git = 'https://github.com/justinFrevert/substrate.git', tag = 'populace-v0.1' }
log = { version = "0.4.14", default-features = false }

[dev-dependencies]
hex-literal = "0.3.1"

[features]
default = ["std"]
std = [
	"codec/std",
	"sp-core/std",
	"sp-std/std",
	"sp-io/std",
	"frame-support/std",
	"sp-runtime/std",
	"frame-system/std",
	"log/std",
]
try-runtime = ["frame-support/try-runtime"]